--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -10,6 +10,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     display: flex;
+    padding-top: 4.5rem;
     /* align-items: center; */
 }
 
