--- a/src/css/home.css
+++ b/src/css/home.css
@@ -68,6 +68,10 @@ a {
     min-height: 80px;
     display: flex;
     /* border: 1px solid; */
+    position: fixed;
+    z-index: 999;
+    background-color: #fff;
+    width: 100%;
 }
 
 @media (max-width: 767px) {
@@ -147,4 +151,22 @@ a {
 
 .hamburger {
     display: none;
+}
+
+@keyframes heartbeat {
+    0% {
+        transform: scale(1);
+    }
+    14% {
+        transform: scale(1.3);
+    }
+    28% {
+        transform: scale(1);
+    }
+    42% {
+        transform: scale(1.3);
+    }
+    70% {
+        transform: scale(1);
+    }
 }
